// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled links 1`] = `
Array [
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: none;
  vertical-align: baseline !important;
  color: rgba(43,45,51,0.24);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
      disabled=""
    >
      Accent link
    </span>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,rgba(43,45,51,0.24),rgba(43,45,51,0.24) 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
      disabled=""
    >
      Accent underline link
    </span>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,rgba(43,45,51,0.24),rgba(43,45,51,0.24) 75%);
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
      disabled=""
    >
      Primary link
    </span>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,rgba(43,45,51,0.24),rgba(43,45,51,0.24) 75%);
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
      disabled=""
    >
      Secondary link
    </span>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,rgba(43,45,51,0.24),rgba(43,45,51,0.24) 75%);
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="c1 c2"
      disabled=""
    >
      Screw
    </span>
  </a>,
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
      />
    </svg>
  </a>,
]
`;

exports[`Link 1`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ any props 1`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0 className"
  download="test.jpg"
  href="test.html"
  id="id"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ design 1`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: none;
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ design 2`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ design 3`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ design 4`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ icon 1`] = `
Array [
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: none;
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
      />
    </svg>
    <span
      class="c1 c2"
    >
       Назад
    </span>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

<a
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Вперед 
    </span>
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
      />
    </svg>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="c1 c2"
    >
      <span>
        Вперед
      </span>
    </span>
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
      />
    </svg>
  </a>,
]
`;

exports[`Link w/ only icon 1`] = `
Array [
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .Linkstyles__Wrapper-sc-40rkfc-0 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
      />
    </svg>
  </a>,
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .Linkstyles__Wrapper-sc-40rkfc-0 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
      />
    </svg>
  </a>,
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .Linkstyles__Wrapper-sc-40rkfc-0 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
        fill-rule="evenodd"
      />
    </svg>
  </a>,
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #00809C;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .Linkstyles__Wrapper-sc-40rkfc-0 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
    class="c0"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
      />
    </svg>
  </a>,
]
`;

exports[`Link w/ size 1`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 4px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ size 2`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Link w/ size 3`] = `
.c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
}

.c3:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c4:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 16px;
  line-height: 26px;
  color: #2B2D33;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 12px;
}

<a
  class="c0"
>
  <span
    class="c1 c2"
  >
    Test link
  </span>
</a>
`;

exports[`Links w/ loading 1`] = `
Array [
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: none;
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,transparent,transparent 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  color: #00809C;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 4px;
}

.c6:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c7:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c8:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c3 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c4 {
  width: 16px;
  height: 16px;
  display: block;
}

.c5 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
    >
      Accent link
    </span>
    <div
      class="c3"
    >
      <svg
        class="c4"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c5"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,transparent,transparent 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 12px;
  line-height: 18px;
  color: #00809C;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #04607D;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 4px;
}

.c6:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c7:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c8:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c3 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c4 {
  width: 16px;
  height: 16px;
  display: block;
}

.c5 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
    >
      Accent underline link
    </span>
    <div
      class="c3"
    >
      <svg
        class="c4"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c5"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,transparent,transparent 75%);
}

.c6:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c7:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c8:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c3 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 20px;
  height: 20px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c4 {
  width: 20px;
  height: 20px;
  display: block;
}

.c5 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
    >
      Primary link
    </span>
    <div
      class="c3"
    >
      <svg
        class="c4"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c5"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,transparent,transparent 75%);
}

.c6:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c7:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 16px;
  line-height: 26px;
  color: #808185;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 12px;
}

.c8:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c3 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c4 {
  width: 24px;
  height: 24px;
  display: block;
}

.c5 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <span
      class="c1 c2"
    >
      Secondary link
    </span>
    <div
      class="c3"
    >
      <svg
        class="c4"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c5"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
  .c2 {
  background-position: 0 100%;
  background-repeat: repeat-x;
  background-size: 1px 1px;
  background-image: linear-gradient(to right,#66C9D7,#66C9D7 75%);
  vertical-align: baseline !important;
  background-image: linear-gradient(to right,transparent,transparent 75%);
}

.c6:hover .c1 {
  background-image: linear-gradient(to right,#04607D,#04607D 75%);
}

.c7:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c8:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #808185;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c1 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c3 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 20px;
  height: 20px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c4 {
  width: 20px;
  height: 20px;
  display: block;
}

.c5 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M11.976 4.002a.437.437 0 00-.171.084c-.196.14-.46.449-.733 1.006-.266.544-.506 1.258-.693 2.12a16.89 16.89 0 00-.324 2.292A3.982 3.982 0 0112 9c.783 0 1.515.226 2.133.616.087.038.175.078.262.119a15.312 15.312 0 012.965 1.862 16.5 16.5 0 012.552 2.505c.719.887 1.283 1.805 1.616 2.681.326.857.465 1.768.188 2.575-.302.881-1.02 1.41-1.891 1.589-.82.169-1.766.035-2.712-.275-.963-.316-1.982-.83-2.973-1.485l1.102-1.669c.876.579 1.734 1.005 2.493 1.253.774.253 1.34.288 1.687.217.296-.06.366-.174.402-.28.062-.18.08-.57-.165-1.214-.238-.624-.675-1.36-1.301-2.133a14.508 14.508 0 00-2.359-2.29 3.99 3.99 0 01-1.177 2.764c-.165.22-.342.44-.531.66a16.166 16.166 0 01-2.618 2.405 15.764 15.764 0 01-3.049 1.78c-1.016.441-2.02.72-2.92.768-.882.047-1.78-.125-2.425-.723-.68-.632-.848-1.518-.716-2.378.13-.84.548-1.73 1.136-2.587.595-.869 1.383-1.735 2.288-2.53l1.32 1.502c-.803.706-1.473 1.45-1.958 2.158-.492.718-.742 1.324-.81 1.762-.064.42.048.558.1.607.088.082.352.224.958.191.59-.031 1.355-.224 2.232-.605.87-.377 1.784-.91 2.655-1.553.182-.135.36-.273.534-.413a4.002 4.002 0 01-2.974-4.476c-.122-1.911.008-3.894.38-5.615.212-.975.497-1.85.851-2.574.347-.71.794-1.346 1.367-1.755.613-.438 1.346-.592 2.08-.334.677.237 1.209.775 1.616 1.402.814 1.253 1.342 3.183 1.555 5.302l-1.99.2c-.2-1.979-.678-3.544-1.242-4.412-.281-.434-.504-.57-.6-.605a.155.155 0 00-.085-.01zM12 11a2 2 0 100 4.002A2 2 0 0012 11z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="c1 c2"
    >
      Screw
    </span>
    <div
      class="c3"
    >
      <svg
        class="c4"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c5"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
  .c0 {
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  color: #2B2D33;
  pointer-events: none;
  color: rgba(43,45,51,0.24);
  pointer-events: none;
  color: transparent;
}

.c0:hover {
  color: #2B2D33;
}

.c0:hover .c4 {
  background-image: linear-gradient(to right,#00809C,#00809C 75%);
}

.c0 > * {
  vertical-align: middle;
}

.c0 > *:not(:last-child) {
  margin-right: 8px;
}

.c1 {
  background-size: cover;
  background-repeat: no-repeat;
  vertical-align: top;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 20px;
  height: 20px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 5;
  margin: auto;
}

.c2 {
  width: 20px;
  height: 20px;
  display: block;
}

.c3 {
  stroke-width: 12px;
  stroke-miterlimit: 10;
  fill: none;
  stroke-dasharray: 85 195;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: bbUszM linear 2s infinite;
  animation: bbUszM linear 2s infinite;
  stroke: #2B2D33;
}

<a
    class="c0"
    disabled=""
    href="#"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
      />
    </svg>
    <div
      class="c1"
    >
      <svg
        class="c2"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="c3"
          color="primary"
          cx="50"
          cy="50"
          r="44"
        />
      </svg>
    </div>
  </a>,
]
`;
